// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a toggle action 1`] = `
Object {
  "payload": Object {
    "construct": "pickleToggle",
  },
  "type": "PREFAB_TOGGLE_SWITCH",
}
`;

exports[`should create a turnOff action 1`] = `
Object {
  "payload": Object {
    "construct": "pickleToggle",
  },
  "type": "PREFAB_TOGGLE_OFF",
}
`;

exports[`should create a turnOn action 1`] = `
Object {
  "payload": Object {
    "construct": "pickleToggle",
  },
  "type": "PREFAB_TOGGLE_ON",
}
`;
